# flexplm-br-transformations-processor/lulu-swagger.yaml
@@ -58,15 +58,15 @@ definitions:
       "@request_type":
         type: string
         description: "request type"
-      "@status":
+      "@status_06":
         type: string
         description: "status"
       "@buy_program_no":
         type: string
         description: "buy program number"
-      "@commodity":
+      "@memo1":
         type: string
-        description: "commodity"
+        description: "Design POD"
       "@brand":
         type: string
         description: "brand"
@@ -82,12 +82,42 @@ definitions:
       "@division":
         type: string
         description: "division"
-      "@size_ranges":
+      "@ref_no":
+        type: string
+        description: "What If Costing Group"
+      "@subdept":
+        type: string
+        description: "Category"
+      "@memo2":
+        type: string
+        description: "Design Line"
+      "@status_01":
+        type: string
+        description: "Size Run Sample Status"
+      "@status_03":
+        type: string
+        description: "Proto Sample Status"
+      "@status_05":
+        type: string
+        description: "Calendar Track"
+      "notes":
+        $ref: '#/definitions/note'
+      "size_ranges":
         $ref: '#/definitions/size_range'
-      "@quote_ext":
+      "quote_ext":
         $ref: '#/definitions/quote_ext'
-      "@attachment":
+      "attachment":
         $ref: '#/definitions/attachment'
+
+  note:
+    type: object
+    properties:
+      "@note_id":
+        type: string
+        description: "Note ID"
+      "@text":
+        type: string
+        description: "Comments"
 
   size_range:
     type: object
@@ -190,9 +220,93 @@ definitions:
       "@active_ind":
         type: string
         description: "Active"
-      "@attachment":
+      "attachment":
         $ref: '#/definitions/attachment'
 
+# Artwork
+
+  artworkBambooRoseResponse:
+    type: object
+    properties:
+      document:
+        $ref: '#/definitions/artwork_document'
+
+  artwork_document:
+    type: object
+    properties:
+      artwork_lib:
+        $ref: '#/definitions/artwork_lib'
+
+  artwork_lib:
+    type: object
+    properties:
+      artwork_lib_h:
+        $ref: '#/definitions/artwork_lib_h'
+
+  artwork_lib_h:
+    type: object
+    properties:
+      "@artwork_name":
+        type: string
+        description: "Artwork Name"
+      "@owner":
+        type: string
+        description: "owner"
+      "@active_ind":
+        type: string
+        description: "active indicator"
+      "@memo1":
+        type: string
+        description: "Artwork Reference Object ID"
+      "@artwork_type":
+        type: string
+        description: "Artwork Type"
+      "@status":
+        type: string
+        description: "status"
+      artwork_lib_b:
+        $ref: '#/definitions/artwork_lib_b'
+
+  artwork_lib_b:
+    type: object
+    properties:
+      "@combo_id":
+        type: string
+        description: "Combo ID"
+      "@memo1":
+        type: string
+        description: "Artwork No"
+      "@combo_name":
+        type: string
+        description: "Combo Name"
+      "@combo_abrv":
+        type: string
+        description: "Combo"
+      "@status":
+        type: string
+        description: "status"
+      artwork_lib_d:
+        type: array
+        items:
+          $ref: '#/definitions/artwork_lib_d'
+      "attachment":
+        $ref: '#/definitions/attachment'
+
+  artwork_lib_d:
+    type: object
+    properties:
+      "@memo3":
+        type: string
+        description: "Color ID"
+      "@color_pos":
+        type: string
+        description: "Color Position"
+      "@memo1":
+        type: string
+        description: "Artwork No"
+      "@combo_id":
+        type: string
+        description: "Combo ID"
 
 # FlexPLM Response
 
@@ -266,6 +380,14 @@ definitions:
       Flex_interface:
         $ref: '#/definitions/flex_interface'
 
+# Artwork
+
+  artworkFlexPLMResponse:
+    type: object
+    properties:
+      Flex_interface:
+        $ref: '#/definitions/flex_interface'
+
 
 # Rules
 
@@ -278,8 +400,28 @@ definitions:
   mapping_rule:
     type: object
     properties:
+      common_mapping:
+        $ref: '#/definitions/common_mapping'
+      color_mapping:
+        $ref: '#/definitions/color_mapping'
       quote_mapping:
         $ref: '#/definitions/quote_mapping'
+
+  common_mapping:
+    type: object
+    properties:
+      active_ind:
+        type: array
+        items:
+          $ref: '#/definitions/flex_br_mapping'
+
+  color_mapping:
+    type: object
+    properties:
+      status:
+        type: array
+        items:
+          $ref: '#/definitions/flex_br_mapping'
 
   quote_mapping:
     type: object
@@ -293,6 +435,26 @@ definitions:
         items:
           $ref: '#/definitions/flex_br_mapping'
       season_style_option_level_status:
+        type: array
+        items:
+          $ref: '#/definitions/flex_br_mapping'
+      category:
+        type: array
+        items:
+          $ref: '#/definitions/flex_br_mapping'
+      design_line:
+        type: array
+        items:
+          $ref: '#/definitions/flex_br_mapping'
+      calendar_track:
+        type: array
+        items:
+          $ref: '#/definitions/flex_br_mapping'
+      proto_sample_status:
+        type: array
+        items:
+          $ref: '#/definitions/flex_br_mapping'
+      size_run_sample_status:
         type: array
         items:
           $ref: '#/definitions/flex_br_mapping'
