# flexplm-br-transformations-processor/src/main/java/com/slower/lulu/model/ColorlibHBuilder.java
@@ -2,7 +2,7 @@ package com.slower.lulu.model;
 
 import com.slower.lulu.utils.Functions;
 
-public class ColorlibHBuilder {
+public class ColorlibHBuilder extends ColorlibH{
     private String memo3;
     private String colorName;
     private String altName1;
@@ -19,97 +19,48 @@ public class ColorlibHBuilder {
         setOwner("LULULEMON");
     }
 
-    public ColorlibHBuilder setMemo3(final String memo3) {
+    public void setMemo3(final String memo3) {
         this.memo3 = Functions.charLimit(memo3, 10);
-        return this;
     }
 
-    public ColorlibHBuilder setColorName(final String colorName) {
+    public void setColorName(final String colorName) {
         this.colorName = Functions.charLimit(colorName, 35);
-        return this;
     }
 
-    public ColorlibHBuilder setAltName1(final String altName1) {
+    public void setAltName1(final String altName1) {
         this.altName1 = Functions.charLimit(altName1, 35);
-        return this;
     }
 
-    public ColorlibHBuilder setMemo2(String memo2) {
+    public void setMemo2(String memo2) {
         this.memo2 = Functions.charLimit(memo2.toUpperCase(), 35);
-        return this;
     }
 
-    public ColorlibHBuilder setStatus(final String status) {
-        switch (status) {
-            case "approved":
-                this.status = "APPROVED";
-                break;
-            case "cfRejected":
-                this.status = "CFREJECT";
-                break;
-            case "cancelled":
-                this.status = "CCL";
-                break;
-            case "created":
-                this.status = "CREATED";
-                break;
-            case "inProgress":
-                this.status = "IP";
-                break;
-            case "limitedApproved":
-                this.status = "LIMITAPP";
-                break;
-            case "requested":
-                this.status = "REQUESTD";
-                break;
-            default:
-                throw new IllegalArgumentException("Unsupported value for status: " + status);
-        }
-
-        this.status = Functions.charLimit(this.status, 8);
-        return this;
+    public void setStatus(final String status) {
+        this.status = Functions.charLimit(Functions.getBRCode("color", "status", status), 8);
     }
 
-    public ColorlibHBuilder setRgbR(final String rgbR) {
+    public void setRgbR(final String rgbR) {
         this.rgbR = Functions.charLimit(rgbR, 7);
-        return this;
     }
 
-    public ColorlibHBuilder setRgbG(final String rgbG) {
+    public void setRgbG(final String rgbG) {
         this.rgbG = Functions.charLimit(rgbG, 7);
-        return this;
     }
 
-    public ColorlibHBuilder setRgbB(final String rgbB) {
+    public void setRgbB(final String rgbB) {
         this.rgbB = Functions.charLimit(rgbB, 7);
-        return this;
     }
 
-    public ColorlibHBuilder setOwner(final String owner) {
+    public void setOwner(final String owner) {
         this.owner = owner;
-        return this;
     }
 
-    public ColorlibHBuilder setActiveInd(final String activeInd) {
-        switch (activeInd) {
-            case "CREATE":
-                this.activeInd = "Y";
-                break;
-            case "UPDATE":
-                this.activeInd = "Y";
-                break;
-            case "DELETE":
-                this.activeInd = "N";
-                break;
-            default:
-                throw new IllegalArgumentException("Unsupported active indicator: " + activeInd);
-        }
-        return this;
+    public void setActiveInd(final String activeInd) {
+        this.activeInd = Functions.charLimit(Functions.getBRCode("common", "active_ind", activeInd), 1);
     }
 
-    public ColorlibHBuilder setAttachment(final Attachment attachment) {
+    public void setAttachment(final Attachment attachment) {
         this.attachment = attachment;
-        return this;
     }
 
     public ColorlibH createColorlibH() {
