# flexplm-br-transformations-processor/src/main/java/com/slower/lulu/model/QuoteBuilder.java
@@ -1,8 +1,6 @@
 package com.slower.lulu.model;
 
-import com.slower.lulu.config.MappingConfig;
 import com.slower.lulu.utils.Functions;
-import com.slower.lulu.config.FlexBrMapping;
 
 public class QuoteBuilder extends Quote{
     private String owner;
@@ -13,14 +11,21 @@ public class QuoteBuilder extends Quote{
     private String altDesc1;
     private String status04;
     private String requestType;
-    private String status;
+    private String status06;
     private String buyProgramNo;
-    private String commodity;
+    private String memo1;
     private String brand;
     private String propertyClass;
     private String subclass;
     private String dept;
     private String division;
+    private String refNo;
+    private String subdept;
+    private String memo2;
+    private String status01;
+    private String status03;
+    private String status05;
+    private Note notes;
     private SizeRange sizeRanges;
     private QuoteExt quoteExt;
     private Attachment attachment;
@@ -61,17 +66,7 @@ public class QuoteBuilder extends Quote{
 
     @Override
     public void setStatus04(final String status04) {
-        this.status04 = Functions.getBRCode("quote", "seasonal_type", status04);
-//        switch (status04.toLowerCase()) {
-//            case "new":
-//                this.status04 = "N";
-//                break;
-//            case "carryover":
-//                this.status04 = "C";
-//                break;
-//            default:
-//                throw new IllegalArgumentException("Unsupported value for status04: " + status04);
-//        }
+        this.status04 = Functions.charLimit(Functions.getBRCode("quote", "seasonal_type", status04), 8);
     }
 
     @Override
@@ -80,28 +75,13 @@ public class QuoteBuilder extends Quote{
     }
 
     @Override
-    public void setStatus(final String status) {
-        this.status = Functions.getBRCode("quote", "season_style_level_status", status);
-//        switch (status.toLowerCase()) {
-//            case "active":
-//                this.status = "ACTIVE";
-//                break;
-//            case "drop":
-//                this.status = "DROP";
-//                break;
-//            default:
-//                throw new IllegalArgumentException("Unsupported value for status: " + status);
-//        }
+    public void setStatus06(final String status) {
+        this.status06 = Functions.charLimit(Functions.getBRCode("quote", "season_style_level_status", status), 8);
     }
 
     @Override
     public void setBuyProgramNo(final String buyProgramNo) {
         this.buyProgramNo = Functions.charLimit(buyProgramNo, 35);
-    }
-
-    @Override
-    public void setCommodity(final String commodity) {
-        this.commodity = Functions.charLimit(commodity, 30);
     }
 
     @Override
@@ -144,7 +124,47 @@ public class QuoteBuilder extends Quote{
         this.attachment = attachment;
     }
 
+    @Override
+    public void setMemo1(final String memo1) {
+        this.memo1 = Functions.charLimit(memo1, 30);
+    }
+
+    @Override
+    public void setRefNo(final String refNo) {
+        this.refNo = Functions.charLimit(refNo, 35);
+    }
+
+    @Override
+    public void setSubdept(final String subdept) {
+        this.subdept = Functions.charLimit(Functions.getBRCode("quote", "category", subdept), 17);
+    }
+
+    @Override
+    public void setMemo2(final String memo2) {
+        this.memo2 = Functions.charLimit(Functions.getBRCode("quote", "design_line", memo2), 35);
+    }
+
+    @Override
+    public void setStatus01(final String status01) {
+        this.status01 = Functions.charLimit(Functions.getBRCode("quote", "size_run_sample_status", status01), 8);
+    }
+
+    @Override
+    public void setStatus03(final String status03) {
+        this.status03 = Functions.charLimit(Functions.getBRCode("quote", "proto_sample_status", status03), 8);
+    }
+
+    @Override
+    public void setStatus05(final String status05) {
+        this.status05 = Functions.charLimit(Functions.getBRCode("quote", "calendar_track", status05), 8);
+    }
+
+    @Override
+    public void setNotes(final Note notes) {
+        this.notes = notes;
+    }
+
     public Quote createQuote() {
-        return new Quote(owner, itemNo, description, season, seasonYear, altDesc1, status04, requestType, status, buyProgramNo, commodity, brand, propertyClass, subclass, dept, division, sizeRanges, quoteExt, attachment);
+        return new Quote(owner, itemNo, description, season, seasonYear, altDesc1, status04, requestType, status06, buyProgramNo, memo1, brand, propertyClass, subclass, dept, division, refNo, subdept, memo2, status01, status03, status05, notes, sizeRanges, quoteExt, attachment);
     }
 }
